# wordnet-lemmatizer

./: Cargo.toml  README.md  difftest.py
.github/workflows/: ci.yml
src/: lib.rs  main.rs
